Release v2.8.0: complementary export and hierarchy budgets.
Ship Metronome/Orb/Stripe multi-target export, partner integration recipes, parent-span reserve-confirm, per-key API budgets, metadata dims, and Flink RedisSink EO hardening (2.7.1).

Co-authored-by: Cursor <cursoragent@cursor.com>